basic calculator tests